[tool.poetry]
name = "bootstrap"
version = "1.1.1"
description = "Automatic setup of new machines"
authors = ["Tommy Carpenter <tommyjcarpenter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jsonschema = "^4.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runboot = "bootstrap.runboot:main"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
